syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.wserp.common.proto";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser (UserRequest) returns (UserResponse);
  rpc getUserByUsernameOrEmail (GetUserByUsernameOrEmailRequest) returns (AuthUserResponse);
  rpc CreateUserByInvite (CreateUserByInviteRequest) returns (CreateUserResponse);
}

message CreateUserByInviteRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string Role = 4;
  string orgId = 5;
  string orgName = 6;
  string title = 7;
}

message CreateUserResponse {
  string id = 1;
  string username = 2;
  string role = 6;
}

message UserRequest {
  string name = 1;
  string email = 2;
  string organizationName = 3;
  string password = 4;
}

message GetUserByUsernameOrEmailRequest {
  string usernameOrEmail = 1;
}

message AuthUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
  string password = 5;
  string role = 6;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
  string organizationId = 5;
  string role = 6;
}

